Add typing indicator and online offline statuys
